[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/CustomizationScreen/CustomizationScreen.gd" type="Script" id=1]
[ext_resource path="res://ui/ColorPicker/CustomColorPicker.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://characters/CharacterMaterial.tres" type="Material" id=4]
[ext_resource path="res://characters/stickman/sprites/stickman1.png" type="Texture" id=5]
[ext_resource path="res://ui/CustomizationScreen/TrailSettings.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/CustomizationScreen/LoadStyleButton.tscn" type="PackedScene" id=7]

[node name="CustomizationScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 115.0
margin_top = 15.0
margin_right = 393.0
margin_bottom = 28.0

[node name="StyleName" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 100.0
margin_bottom = 13.0
rect_min_size = Vector2( 100, 0 )
max_length = 64
placeholder_text = "style name"

[node name="SaveButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 101.0
margin_right = 127.0
margin_bottom = 13.0
text = "save"

[node name="LoadStyleButton" parent="HBoxContainer" instance=ExtResource( 7 )]
margin_left = 128.0
margin_right = 219.0
text = "load"

[node name="OpenFolderButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 220.0
margin_right = 278.0
margin_bottom = 13.0
text = "open folder"

[node name="SeeOn" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 75.0
margin_bottom = 33.0
text = "view style
on character:"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -140.0
margin_right = 79.0
margin_bottom = 155.0

[node name="CharacterButtonContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
margin_right = 71.0
margin_bottom = 295.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -215.0
margin_top = 20.0
margin_right = -8.0
margin_bottom = 335.0

[node name="ScrollContainer2" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer2"]
margin_right = 201.0
margin_bottom = 1463.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_right = 201.0
margin_bottom = 12.0

[node name="ColorsSimpleLabel" type="Label" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer"]
margin_right = 69.0
margin_bottom = 11.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Color Scheme"

[node name="ShowOutline" type="CheckButton" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 70.0
margin_right = 124.0
margin_bottom = 12.0
size_flags_horizontal = 0
text = "outline"

[node name="Control" type="Control" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 137.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.33

[node name="ResetColorButton" type="Button" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 138.0
margin_right = 201.0
margin_bottom = 12.0
size_flags_horizontal = 0
theme = ExtResource( 3 )
text = "reset colors"

[node name="MarginContainer" type="MarginContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 17.0
margin_right = 201.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_constants/margin_right = 2
custom_constants/margin_left = 2

[node name="SimpleColorButtonContainer" type="GridContainer" parent="Panel/ScrollContainer2/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 2.0
margin_right = 199.0
custom_constants/vseparation = 3
custom_constants/hseparation = 1
columns = 6

[node name="CenterContainer" type="CenterContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 22.0
margin_right = 201.0
margin_bottom = 22.0

[node name="HSeparator" type="HSeparator" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 27.0
margin_right = 201.0
margin_bottom = 31.0

[node name="ColorsAdvancedLabel" type="Label" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 36.0
margin_right = 201.0
margin_bottom = 47.0
text = "Colors - Advanced"

[node name="ColorPickers" type="TabContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 52.0
margin_right = 201.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 220 )
tab_align = 0

[node name="Character" parent="Panel/ScrollContainer2/VBoxContainer/ColorPickers" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 11.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Outline" parent="Panel/ScrollContainer2/VBoxContainer/ColorPickers" instance=ExtResource( 2 )]
unique_name_in_owner = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 13.0
margin_right = 189.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 277.0
margin_right = 201.0
margin_bottom = 281.0

[node name="HitsparkLabel" type="Label" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 286.0
margin_right = 201.0
margin_bottom = 297.0
text = "Hit Spark"

[node name="MarginContainer2" type="MarginContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 302.0
margin_right = 201.0
margin_bottom = 302.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="HitsparkButtonContainer" type="HFlowContainer" parent="Panel/ScrollContainer2/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
margin_left = 5.0
margin_right = 196.0

[node name="HSeparator3" type="HSeparator" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 307.0
margin_right = 201.0
margin_bottom = 311.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/ScrollContainer2/VBoxContainer"]
margin_top = 316.0
margin_right = 201.0
margin_bottom = 328.0

[node name="TrailEditLabel" type="Label" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 126.0
margin_bottom = 11.0
size_flags_horizontal = 3
text = "Particle Aura"

[node name="ShowAura" type="CheckButton" parent="Panel/ScrollContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 127.0
margin_right = 201.0
margin_bottom = 12.0
text = "show aura"

[node name="TrailSettings" parent="Panel/ScrollContainer2/VBoxContainer" instance=ExtResource( 6 )]
unique_name_in_owner = true
margin_top = 333.0
margin_right = 201.0
margin_bottom = 1463.0

[node name="MovingSprite" type="Sprite" parent="."]
unique_name_in_owner = true
material = ExtResource( 4 )
position = Vector2( 232, 220 )
z_index = 10
texture = ExtResource( 5 )

[node name="StaticSprite" type="Sprite" parent="."]
unique_name_in_owner = true
material = ExtResource( 4 )
position = Vector2( 232, 156 )
z_index = 10
texture = ExtResource( 5 )

[node name="HitsparkDisplay" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 232, 96 )

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 591.0
margin_top = 337.0
margin_right = 632.0
margin_bottom = 354.0
size_flags_horizontal = 0
text = "go back"

[node name="SavedLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 139.0
margin_top = 31.0
margin_right = 179.0
margin_bottom = 42.0
text = "style saved"

[connection signal="text_entered" from="HBoxContainer/StyleName" to="." method="_on_StyleName_text_entered"]
[connection signal="pressed" from="HBoxContainer/OpenFolderButton" to="." method="_on_OpenFolderButton_pressed"]
